hard-gists/1877577/run.log
=== Docker Run Log for 1877577 ===
Started at: Mi 29. Okt 12:32:12 CET 2025

[2025-10-29 12:32:12] START: Running container for 1877577
[2025-10-29 12:32:13] SUCCESS: Container 50a1a13d16d7bebeb2d592faa13ce285b419988c15ecf547a6b620c09f156dc2 started for 1877577
=== Container logs for 1877577 ===
  File "/snippet.py", line 119
    except MySQLdb.OperationalError, (errno, errmsg):
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1877577 ===
[2025-10-29 12:32:15] INFO: Container 50a1a13d16d7bebeb2d592faa13ce285b419988c15ecf547a6b620c09f156dc2 has stopped
